k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sibr-datablase-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api.blaseball-reference.com
      secretName: api-tls
  rules:
    - host: api.blaseball-reference.com
      http:
        paths:
          - backend:
              serviceName: sibr-datablase
              servicePort: 3000
